tests/NormalTests/paczka1/fuzzy1/88542213.err
Error in line 30: A650 A650 136,5
Error in line 20: dn3zw S173 82,2
